-bug#0002576: Call to a non-existent column of the database in poller.c -bug#0002578: spine doesn't compile on ubuntu 12.04 -bug#0002585: Spine: buffer overflow in logging when RESULTS_BUFFER>LOGSIZE can SEGV

--- a/spine/tags/0.8.8e/configure.ac
+++ b/spine/tags/0.8.8e/configure.ac
@@ -243,16 +243,7 @@ AC_CHECK_LIB(mysqlclient_r,mysql_init, LIBS="-lmysqlclient_r",
   AC_MSG_ERROR([MySQL libraries not found])
 )
 
-# Net/UCD-SNMP includes v3 support and insists on crypto unless compiled --without-openssl
-AC_MSG_CHECKING([if UCD-SNMP needs crypto support])
-SNMP_SSL=no
-AC_TRY_COMPILE([#include <ucd-snmp-config.h>], [exit(USE_OPENSSL != 1);],
-  [  AC_MSG_RESULT(yes)
-     SNMP_SSL=yes
-  ],
-  AC_MSG_RESULT(no)
-)
-
+# Net-SNMP includes v3 support and insists on crypto unless compiled --without-openssl
 AC_MSG_CHECKING([if Net-SNMP needs crypto support])
 AC_TRY_COMPILE([#include <net-snmp-config.h>], [exit(USE_OPENSSL != 1);],
   [  AC_MSG_RESULT(yes)
